# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [0.8.0] - 2020-01-04
### Added
* Allow cache users to invalidate a ratelimit after a specific time
* Changing limit and duration before expire should now work correctly

## Changes
* TokenBucketItem is now provided when `OnChange()` is called instead of `RateLimitResp`
* Fixed a bug in global behaviour where it would return an error if the async
update had not occured before the a second request is made. Now it acts like it
owns the rate limit until the owning node sends an update
* Always include reset_time in leaky bucket responses

## [0.7.1] - 2019-12-10
### Added
* Added `Loader` interface for only loading and saving at startup and shutdown
* Added `Store` interface for continuous synchronization between the persistent store and the cache.
### Changes
* Moved `cache.Cache` into the `gubernator` package
* Changed the `Cache` interface to use `CacheItem` for storing and retrieving cached items.

## [0.6.0] - 2019-11-12
### Added
* DURATION_IS_GREGORIAN behavior to support interval based ratelimit durations
* Fixed issue where switching to leakybucket was impossible
* Fixed rate would never decrease if the client continued to add hits and failed.

## [0.5.0] - 2019-07-23
### Added
* Support for prometheus monitoring
* Support for environment based config
* Support for kubernetes peer discovery

## [0.4.0] - 2019-07-16
### Added
* Support for GLOBAL behavior
* Improved README documentation
### Changes
* GetRateLimits() now fetches rate limits asynchronously

## [0.3.2] - 2019-06-03
### Changes
* Now properly respecting the maxBatchLimit when talking with peers

## [0.3.1] - 2019-06-03
### Changes
* Minor log wording change when registering etcd pool

## [0.3.0] - 2019-05-16
### Changes
* Initial Release